# AVR-VMC-Fusion-Module

./: .gitmodules  .pre-commit-config.yaml  Dockerfile  README.md  package-lock.json  pyproject.toml
.github/: dependabot.yml
.github/workflows/: build.yml
src/: config.py  fusion.py
tests/: conftest.py  test_fusion.py
