[tool.poetry]
    name        = "bell-avr-vmc-fusion-module"
    version     = "0.1.0"
    description = "Sensor fusion module for Bell AVR"
    license     = "MIT"
    readme      = "README.md"
    homepage    = "https://github.com/bellflight/AVR-VMC-Fusion-Module"
    authors     = ["Nathan Vaughn <nvaughn51@gmail.com>"]

[tool.poetry.dependencies]
    python             = ">=3.9,<3.12"
    loguru             = "^0.6.0"
    bell-avr-libraries = "0.2.0a2"
    numpy              = "^1.24.3"
    pymap3d            = "^3.0.1"

[tool.poetry.group.dev.dependencies]
    pre-commit  = "3.3.2"
    pytest      = "^7.3.1"
    pytest-cov  = "4.1.0"
    pytest-mock = "^3.10.0"

[tool.pyright]
    typeCheckingMode = "basic"
    venvPath         = "."
    venv             = ".venv"

[tool.ruff]
    ignore = ["E501"]
