[tool.poetry]
    name        = "bell-avr-vmc-fusion-module"
    version     = "0.1.0"
    description = "Sensor fusion module for Bell AVR"
    license     = "MIT"
    readme      = "README.md"
    homepage    = "https://github.com/bellflight/AVR-VMC-Fusion-Module"
    authors     = ["Nathan Vaughn <nvaughn51@gmail.com>"]

[tool.poetry.dependencies]
    python             = ">=3.9,<3.12"
    loguru             = "0.7.0"
    bell-avr-libraries = "0.2.0a4"
    numpy              = "1.25.0"
    pymap3d            = "3.0.1"

[tool.poetry.group.dev.dependencies]
    pre-commit  = "3.3.3"
    pytest      = "7.4.0"
    pytest-cov  = "4.1.0"
    pytest-mock = "3.11.1"

[tool.pyright]
    typeCheckingMode = "basic"
    venvPath         = "."
    venv             = ".venv"
    reportMissingParameterType  = true

[tool.ruff]
    ignore = ["E501"]
